fix bug with size of image and layout on small screens

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -47,12 +47,15 @@ body {
 
 .card-horizontal {
     flex-direction: row;
-    height: 210px;
+}
+
+.card-image {
+  max-width: 280px;
 }
 
 .card-horizontal img {
-    max-width: 300px;
-    height: 208px;
+    width: 100%;
+    height: 100%;
 }
 
 .card-horizontal .card-stacked {
@@ -68,7 +71,6 @@ body {
     flex-grow: 1;
     padding: 15px;
     border-radius: 0 0 2px 2px;
-    height: 156px;
 }
 
 .card-content p {
